logs/djnotty.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_jsonfield-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/djnotty'...
Listing './lib/python3.5/site-packages/djnotty/migrations'...
Compiling './lib/python3.5/site-packages/djnotty/migrations/0008_auto_20160118_1730.py'...
***   File "./lib/python3.5/site-packages/djnotty/migrations/0008_auto_20160118_1730.py", line 8
    print m.objects.count()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djnotty/models.py'...
***   File "./lib/python3.5/site-packages/djnotty/models.py", line 40
    print kwargs
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djnotty/static'...
Listing './lib/python3.5/site-packages/djnotty/static/djnotty'...
Listing './lib/python3.5/site-packages/djnotty/static/djnotty/js'...
Listing './lib/python3.5/site-packages/djnotty/static/djnotty/js/layouts'...
Listing './lib/python3.5/site-packages/djnotty/static/djnotty/js/packaged'...
Listing './lib/python3.5/site-packages/djnotty/static/djnotty/js/themes'...
Listing './lib/python3.5/site-packages/djnotty/templates'...
Compiling './lib/python3.5/site-packages/djnotty/views.py'...
***   File "./lib/python3.5/site-packages/djnotty/views.py", line 59
    print viewed
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djnotty-0.0.5.egg-info'...
Listing './lib/python3.5/site-packages/jsonfield'...
Listing './lib/python3.5/site-packages/jsonfield/templatetags'...
Listing './lib/python3.5/site-packages/jsonfield/tests'...
Listing './lib/python3.5/site-packages/jsonfield/tests/jsonfield_test_app'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
